welcome.lessons.welcome.array.array667.Array667.scala.error
array667:14: error: ';' expected but ',' found.
  return cpt66,cpt67
              ^