welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var place:Int=0
  var cpt66:Int=0
  var cpt67:Int=0
  while (nums.length-place-1 >0){
    if (nums(place)==6 && nums(place+1)==6){
      cpt66=cpt66+1
    }
    if (nums(place)==6 && nums(place+1)==7){
      cpt67=cpt67+1
    }
    place=place+1
    }
  return cpt66,cpt67
}